//
// Copyright 2017-2018 Plexus Interop Deutsche Bank AG
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package interop;

import "interop/unique_id.proto";
import "interop/app_launch_mode.proto";

service AppLauncherService {
	rpc Launch(AppLaunchRequest) returns (AppLaunchResponse);
}

message AppLaunchRequest {
	string app_id = 1;
	string launch_params_json = 2;
	AppLaunchMode launch_mode = 3;
	UniqueId suggested_app_instance_id = 4;
	AppLaunchReferrer referrer = 5;
}

message AppLaunchReferrer {
	string app_id = 1;
	UniqueId app_instance_id = 2;	
	UniqueId connection_id = 3;
}

message AppLaunchResponse {
	UniqueId app_instance_id = 1;
}
