//
// Copyright 2017 Plexus Interop Deutsche Bank AG
// SPDX-License-Identifier: Apache-2.0
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package com.db.plexus.interop.dsl.protobuf.tests;

import "google/protobuf/empty.proto";
import "com/db/plexus/interop/dsl/protobuf/tests/option_declare.proto";

message UniqueId {
    option (tests.message_string) = "interop.UniqueId";
    option (message_int) = 10;
    option deprecated = true;

    fixed64 lo = 1;
    fixed64 hi = 2;
}

service UniqueIdService {
	option (service_string) = "interop.GetUniqueId";
	option (.com.db.plexus.interop.dsl.protobuf.tests.service_int) = 10;
	
	rpc GetUniqueId (google.protobuf.Empty) returns (UniqueId);
}